tests/analyze/non-function-call/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Type mismatch: expected `int`, but found `int -> 'u`.
> 3 | def y = x 5
              ^

